# Verum-Veil-

./: README.md  VerumVeil.py  main.py  pyproject.toml
Defs/: main.py  openai.py
VerumVeil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: main.py
methods/: ai_crypt.py  emoji_crypt.py  skipcode_crpyt.py
modules/: ai_crypt.py  emoji_crypt.py  skipcode_crpyt.py  skipcode_crypt.py
tests/: test_skipcode_crypt.py
utils/: config.py  genai.py
